--- a/styles/modules/Home.module.scss
+++ b/styles/modules/Home.module.scss
@@ -16,6 +16,12 @@
   }
 }
 
+// @media only screen and (max-width: 1250px) {
+//   .para{
+//     height: 60vh;
+//   }
+// }
+
 @media only screen and (max-width: 900px) {
   .para{
     height: 70vh;
@@ -80,21 +86,26 @@
 .right{
   margin: 2rem 20%;
   text-align: right;
+  padding: 1rem;
   p {
     text-indent: 2rem;
     width: 40vw;
     font-size: 1.5rem;
     text-align: justify;
+    word-wrap: break-word;
+    white-space: pre-line;
+    margin-right: 3rem;
+    margin-left: auto;
   }
   h2{
     margin-right: 2rem;
     font-size: 3rem;
   }
   .call2act{
-    float: right;
+    margin-left: auto;
     margin-right: 3rem;
   }
-  float: right;
+  // float: right;
 
   .call2act:hover{
     transform: scale(110%) rotate(-4deg) ;
@@ -111,6 +122,8 @@
     margin: 1rem auto;
     font-size: 1.5rem;
     text-align: justify;
+    word-wrap: break-word;
+    white-space: pre-line;
   }
   width: 40vw;
   padding: 1rem;
@@ -145,6 +158,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  // transform: matrix(1.27408,0,0,1.58885,-245.147,-3069.76);
 
   .right{
     max-height: 60vh;
